*** If you want to know full changes, please read 000_gitlog.txt and history.txt. ***

* SNAPSHOT Dec 10, 2015
  * MERGE upstream 2015-12-10 .
  * Change APIs to upstream's OSD class , apply to Qt.
  * Still not built for Win32.
  * Built with 3fe6eddaeb7d6b2ba2c69a06e8cdc05acac690f2 ,
    excepts eTK80BS for 79e5e48043a64b6b74257fe3a9fc20e80b0e2252.
  
-- Dec 10, 2015 19:18:05 +0900 K.Ohta <whatisthis.sowhat@gmail.com>

* SNAPSHOT Nov 20, 2015
  * MERGE upstream 2015-11-18 .
  * Remove original definition min() max() if supplied from toolchain. 
  * Qt: (MAYBE) Working with Windows XP, but not tested enough to.
  * Fixed typos.
  * Built with commit 4b3f3a7e4c007c1f4da62b64ceed8821fa239575 and newer Documents.
  
-- Nov 20, 2015 01:08:28 +0900 K.Ohta <whatisthis.sowhat@gmail.com>

* SNAPSHOT Nov 17, 2015
  * Qt: (MAYBE) Working with Windows XP, but not tested enough to.
  * Qt: Working Auto key (paste from clipboard) feature.
  * Qt/Emu: More thread-safety calling via UI <-> EMU.
  * VM/MSX2: Fix wrong color built with Qt.
  * Update credits, thanks to umaiboux San.
  * Built with commit 64f901722d3382bc3feb6680a5ede240dcad2773 and newer Documents.
    Excepts HC-20/40/80, with commit a249e76d9bd77e42e45ec066e6c063498c6600bd.
  
-- Nov 18, 2015 02:01:48 +0900 K.Ohta <whatisthis.sowhat@gmail.com>

* SNAPSHOT Nov 14. 2015
  * Qt/GUI: Integrate menus to meta-class.
  * Win32/Qt: Enable to build with MinGW32 and Qt 5.5.1, please test!!!
  * Built with commit 910b3cce215964380fa3dbe38fbb673c52bf4d34 excepts with newer documents.
  * A lot of fixes.
  
-- Nov 14, 2015 20:12:24 +0900 K.Ohta <whatisthis.sowhat@gmail.com>

* SNAPSHOT Nov 05. 2015
  * Merged Upstream 2015-10-31 , thanks for Takeda-San.
  * Qt: Change Draw method from QOpenGLFunctions_2_0 to QOpenGLFunctions, expect to work with OpenGL ES 2.0, without OpenGL.
  * FM7: Fix problem of LSHIFT and RSHIFT.
  * Qt: Add OpenGL rendereded scan line.
  * OpenGL: Use GLSL to rendering.