@@ -8,9 +8,9 @@
 <body>
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=-1>
-Upstream Version: 2015-12-10<BR>
-SNAPSHOT 2015-12-12-1<BR>
-Build Version: 831c266e7d2b56303e150f46311d8aa56af03dea</FONT></DIV>
+Upstream Version: 2015-12-17<BR>
+SNAPSHOT 2015-12-22-1<BR>
+Build Version: 24709b7e0ffdd2714266c487465cc4b37208aace</FONT></DIV>
 <BR>
 <h2>Upstream Author:</h2>
 2006,2015 ©TAKEDA Toshiya<BR>
@@ -55,5 +55,5 @@ See also:<BR>
 
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Thu Nov 19 19:28:55 JST 2015 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Thu Dec 22 16:458:45 JST 2015 <!-- hhmts end -->
 </body> </html>
