@@ -1,5 +1,16 @@
 *** If you want to know full changes, please read 000_gitlog.txt and history.txt. ***
 
+* SNAPSHOT Dec 22, 2015
+  * MERGE upstream 2015-12-17, support new APIs .
+  * Change APIs to upstream's OSD class , apply to Qt.
+  * Mostly built for Win32.
+  * FM-7/NEW7: Fix a lot of bugs.
+  * FM7 series: Variable virtual screen size, see src/vm/fm7/display.cpp .
+  * X1 series: Double buffering for TEXT/PCG.
+  * Built with commit 24709b7e0ffdd2714266c487465cc4b37208aace .
+  
+-- Dec 22, 2015 16:43:26 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
+
 * SNAPSHOT Dec 10, 2015
   * MERGE upstream 2015-12-10 .
   * Change APIs to upstream's OSD class , apply to Qt.
